--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,8 @@ incremental         : false
 detach              : false
 port                : 4000
 host                : 127.0.0.1
-baseurl             : "" # does not include hostname
+baseurl: "/Jekyll"
+url: "https://nabileboukourray.github.io"
 show_dir_listing    : false
 title              : My Site
 
